# aecl

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
include/aecl/: status.hpp
include/aecl/image/: export.hpp  format.hpp  import.hpp
include/aecl/scene/: export.hpp  import.hpp  utils.hpp
include/ecl/image/: export.hpp  format.hpp  import.hpp
include/ecl/scene/: export.hpp  import.hpp  utils.hpp
src/: export.cpp  import.cpp
src/image/: export.cpp  import.cpp
src/scene/: utils.cpp
tests/: CMakeLists.txt  env.cpp  env.hpp  main.cpp
tests/data/: image.exr  image.hdr  image.heif  image.ppm  image.tga  image.tiff  image.umia
tests/image/: export.cpp  import.cpp
tests/image/import/: bmp.cpp  common.cpp  exr.cpp  gif.cpp  hdr.cpp  heif.cpp  jpeg.cpp  png.cpp  ppm.cpp  tga.cpp  tiff.cpp  umbf.cpp  webp.cpp
tests/scene/: common.cpp  common.hpp  obj_export_multimat.cpp  obj_export_texgen.cpp  obj_export_texture.cpp  obj_export_triangles.cpp  obj_import.cpp  parse_exception.cpp
